--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- AIzaSyA8rt9LCZJB6uOyzTOOCeUwF7YSbOd9MCE -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8rt9LCZJB6uOyzTOOCeUwF7YSbOd9MCE&libraries=places&callback=initMap"async></script>
     <title>React App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
