--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- AIzaSyA8rt9LCZJB6uOyzTOOCeUwF7YSbOd9MCE -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8rt9LCZJB6uOyzTOOCeUwF7YSbOd9MCE&libraries=places&callback=initMap"async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8rt9LCZJB6uOyzTOOCeUwF7YSbOd9MCE&libraries=places,geometry&callback=initMap"async></script>
     <title>React App</title>
 
   </head>
